--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
                 <ul>
                   <li>
                     Cálculo y presentación de impuestos definitivos y
-                    provisionales de Personas{" "}
+                    provisionales de Personas Físicas y Morales
                   </li>
-                  <li>Físicas y Morales</li>
                   <li>Trato directo con el cliente.</li>
                   <li>Ponente y creadora de cursos educativos.</li>
                   <li>Dominio básico/intermedio del inglés.</li>
@@ -214,7 +213,8 @@
                   Contralor jr
                   <br />
                   Inward Consultoría Fiscal y Patrimonial, S.C.
-                  <br /> Junio 2016 - Mayo 2019
+                  <br />
+                  Junio 2016 - Mayo 2019
                   <br />
                   <br />
                 </p>
@@ -253,7 +253,7 @@
     </div>
 
     <!-- contacto  -->
-    
+
     <div class="contact-container" id="contacto">
       <div class="container">
         <h5>Contacto</h5>
@@ -266,16 +266,14 @@
           <a href="mailto:mirandajgb@gmail.com">mirandajgb@gmail.com</a>
         </h4>
         <h4>
-          <a href="https://www.linkedin.com/in/miranda-jannel-garc%C3%ADa-79824b171/">
+          <a
+            href="https://www.linkedin.com/in/miranda-jannel-garc%C3%ADa-79824b171/"
+          >
             Linkedin
           </a>
         </h4>
-        <div class="mt-5">
-          © mirandajannel.com
-        </div>
+        <div class="mt-5">© mirandajannel.com</div>
       </div>
     </div>
-
   </body>
-  
 </html>
